fix: map collaps on less then 815px

--- a/styles/contacts.css
+++ b/styles/contacts.css
@@ -19,6 +19,7 @@
 .contacts__map {
   grid-area: map;
   position: relative;
+  height: 488px;
 }
 
 .contacts__map > ymaps {
